[gd_scene load_steps=2 format=3 uid="uid://ctrke8n3dxg7b"]

[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -34.0
offset_right = 46.5
offset_bottom = 34.0

[node name="SinglePlayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Single Player"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Multiplayer"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/SinglePlayer" to="." method="_on_SinglePlayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
